logs/Slang/generated/hdlconv/hdlconvertor_p154_1.sv.log
name: hdlconvertor_p154_1
description: Tests imported from hdlconv
files: /home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2012/p154_1.sv
should_fail: 0
tags: hdlconv
incdirs: 
top_module: 
rc: 1

../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2012/p154_1.sv:3:1: error: language feature not yet supported
class C;
^~~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2012/p154_1.sv:9:10: error: 'C' recursively depends on its own definition
function C::T C::f();
         ^
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2012/p154_1.sv:9:15: note: declared here
function C::T C::f();
              ^
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2012/p154_1.sv:15:15: error: redefinition of 'C'
function real C::f2();
              ^
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2012/p154_1.sv:9:15: note: previous definition here
function C::T C::f();
              ^
